tests/spec/compile-fail/114_await_task_use_after.zn
// category: compile-fail
// profile: hosted
// purpose: await task consumes the task handle

module tests.fail.awaitTaskUseAfter;

async fn runWork(move work: Work) -> Result<Unit, WorkError> {
    return process(move work);
}

async fn bad(move runtime: Runtime, move work: Work) -> Result<Unit, WorkError> {
    val task = try runtime.spawn(runWork(move work));

    try await task;
    try await task; // expected-error: task handle was consumed by await
    return Ok(());
}
